--- a/package.json
+++ b/package.json
@@ -52,5 +52,6 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
-  }
+  },
+  "packageManager": "yarn@3.2.0"
 }
